--- a/Alpha_beta_pruning.ipynb
+++ b/Alpha_beta_pruning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "5e439d40-6b02-4629-ae3e-d55328a33d85",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
       "\n",
       "Computer is making a move...\n",
       "\n",
-      "Computer took 0.0382 seconds to decide on a move.\n",
+      "Computer took 0.0404 seconds to decide on a move.\n",
       "\n",
       "I got the Center, that’s where the power lies! I placed 'O' at position (1, 1)\n",
       "\n",
@@ -70,7 +70,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter your move (row and column separated by space, e.g., '1 2'):  0 1\n"
+      "Enter your move (row and column separated by space, e.g., '1 2'):  1 0\n"
      ]
     },
     {
@@ -80,26 +80,26 @@
       "\n",
       "    0   1   2\n",
       "  +---+---+---+\n",
-      "0 | X | X |   |\n",
+      "0 | X |   |   |\n",
       "  +---+---+---+\n",
-      "1 |   | O |   |\n",
+      "1 | X | O |   |\n",
       "  +---+---+---+\n",
       "2 |   |   |   |\n",
       "  +---+---+---+\n",
       "\n",
       "Computer is making a move...\n",
       "\n",
-      "Computer took 0.0010 seconds to decide on a move.\n",
+      "Computer took 0.0020 seconds to decide on a move.\n",
       "\n",
-      "I love the corners. I placed 'O' at position (0, 2)\n",
+      "I love the corners. I placed 'O' at position (2, 0)\n",
       "\n",
       "    0   1   2\n",
       "  +---+---+---+\n",
-      "0 | X | X | O |\n",
+      "0 | X |   |   |\n",
       "  +---+---+---+\n",
-      "1 |   | O |   |\n",
+      "1 | X | O |   |\n",
       "  +---+---+---+\n",
-      "2 |   |   |   |\n",
+      "2 | O |   |   |\n",
       "  +---+---+---+\n"
      ]
     },
@@ -108,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter your move (row and column separated by space, e.g., '1 2'):  2 0\n"
+      "Enter your move (row and column separated by space, e.g., '1 2'):  0 2\n"
      ]
     },
     {
@@ -118,26 +118,26 @@
       "\n",
       "    0   1   2\n",
       "  +---+---+---+\n",
-      "0 | X | X | O |\n",
+      "0 | X |   | X |\n",
       "  +---+---+---+\n",
-      "1 |   | O |   |\n",
+      "1 | X | O |   |\n",
       "  +---+---+---+\n",
-      "2 | X |   |   |\n",
+      "2 | O |   |   |\n",
       "  +---+---+---+\n",
       "\n",
       "Computer is making a move...\n",
       "\n",
       "Computer took 0.0000 seconds to decide on a move.\n",
       "\n",
-      "I’m always thinking one step ahead. I placed 'O' at position (1, 0)\n",
+      "I’m always thinking one step ahead. I placed 'O' at position (0, 1)\n",
       "\n",
       "    0   1   2\n",
       "  +---+---+---+\n",
-      "0 | X | X | O |\n",
+      "0 | X | O | X |\n",
       "  +---+---+---+\n",
-      "1 | O | O |   |\n",
+      "1 | X | O |   |\n",
       "  +---+---+---+\n",
-      "2 | X |   |   |\n",
+      "2 | O |   |   |\n",
       "  +---+---+---+\n"
      ]
     },
@@ -156,11 +156,11 @@
       "\n",
       "    0   1   2\n",
       "  +---+---+---+\n",
-      "0 | X | X | O |\n",
+      "0 | X | O | X |\n",
       "  +---+---+---+\n",
-      "1 | O | O |   |\n",
+      "1 | X | O |   |\n",
       "  +---+---+---+\n",
-      "2 | X | X |   |\n",
+      "2 | O | X |   |\n",
       "  +---+---+---+\n",
       "\n",
       "Computer is making a move...\n",
@@ -171,14 +171,39 @@
       "\n",
       "    0   1   2\n",
       "  +---+---+---+\n",
-      "0 | X | X | O |\n",
+      "0 | X | O | X |\n",
       "  +---+---+---+\n",
-      "1 | O | O | O |\n",
+      "1 | X | O | O |\n",
       "  +---+---+---+\n",
-      "2 | X | X |   |\n",
+      "2 | O | X |   |\n",
+      "  +---+---+---+\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Enter your move (row and column separated by space, e.g., '1 2'):  2 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    0   1   2\n",
+      "  +---+---+---+\n",
+      "0 | X | O | X |\n",
+      "  +---+---+---+\n",
+      "1 | X | O | O |\n",
+      "  +---+---+---+\n",
+      "2 | O | X | X |\n",
       "  +---+---+---+\n",
       "\n",
-      "Computer (O) wins! Better luck next time!\n"
+      "It's a tie!\n",
+      "\n",
+      "Total time taken by the Alpha_beta_pruning Algorithm to make moves: 0.0424 seconds\n"
      ]
     }
    ],
@@ -350,7 +375,6 @@
     "\n",
     "        move = game.best_move(player_symbol, computer_symbol)\n",
     "\n",
-    "        # Adding personality to the AI's moves\n",
     "        if move in [0, 2, 6, 8]:  # After Taking a Corner\n",
     "            print(f\"\\nI love the corners. I placed '{computer_symbol}' at position ({move // 3}, {move % 3})\")\n",
     "        elif move == 4:  # After Taking the Center\n",
@@ -372,6 +396,7 @@
     "            return\n",
     "            \n",
     "    print(\"\\nIt's a tie!\")\n",
+    "    \n",
     "    # After the game ends, print the total time taken by the AI\n",
     "    print(f\"\\nTotal time taken by the Alpha_beta_pruning Algorithm to make moves: {game.total_time_taken():.4f} seconds\")\n",
     "\n",
